# MAFIA_MUD

./: .cursorrules  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: DEVELOPMENT_PLAN.md  JOB_SYSTEM_DESIGN.md  NPC_AUTONOMY_DESIGN.md  PHASE_8_SYSTEMS_EXPANSION_PLAN.md  SOCIAL_JUSTICE_EXPANSION.md  UI_PANEL_REFACTOR_PLAN.md
include/character/: character_draft.h  character_family.h  character_name.h  character_name_pools.h  character_social_network.h  character_start.h  character_tables.h  character_types.h  player_profile.h  profile_builder.h
include/core/: application.h  sim_clock.h  types.h
include/dev/: dev_console.h
include/game/: action_reason_catalog.h  agent_relation_events.h  bank_loan.h  covert_action_executor.h  crime_legal_tier.h  crime_scene_generator.h  criminal_record.h  custody_timer.h  economy_constants.h  economy_index.h  evidence_system.h  game_calendar.h  housing_economy.h  housing_living_costs.h  investigation_case_store.h  jail_events.h  job_catalog.h  kin_housing.h  landlord_contact.h  legal_counsel.h  npc_decision.h  npc_population.h  npc_spatial_init.h  ny_penal_codes.h  operation_types.h  player_career.h  player_criminal_justice.h  player_employment.h  player_health.h  player_information_feed.h  player_law_enforcement.h  player_law_intel.h  player_narrative_archive.h  player_operations.h  player_organization.h  player_organization_ui.h  player_wallet.h  player_work_schedule.h  player_world_state.h  plea_bargain.h  (+12 more)
include/persistence/: playthrough_archive.h  save_game.h  save_gameplay_stores.h
include/procgen/: borough_map_data.h  world_generator.h
include/sim/: agent_relationship_graph.h  borough_vitality_system.h  calendar_system.h  character_agent.h  city_control_system.h  criminal_justice_system.h  economy_system.h  influence_system.h  isim_system.h  npc_autonomy_system.h  operation_system.h  police_system.h  sim_context.h  sim_event_queue.h  sim_world_bindings.h  street_crime_system.h  system_registry.h  world_event_catalog.h  world_event_store.h  world_event_system.h  world_event_types.h
include/ui/: business_renderer.h  context_help.h  dock_layout.h  dock_panel_helpers.h  game_dock_panels.h  game_modal_state.h  game_modal_ui.h  game_ui.h  game_ui_frame_context.h  game_ui_panels.h  help_manual.h  landmark_renderer.h  map_camera.h  map_marker_style.h  map_notification_layer.h  map_renderer.h  map_status_hud.h  map_ui_requests.h  npc_map_marker.h  panel_manager.h  panel_visibility.h  player_map_marker.h  real_estate_ui.h  viewport_state.h
include/utils/: app_paths.h  seed_hash.h
include/world/: business_node_table.h  chunk_store.h  city_control.h  district_grid.h  district_store.h  landmark_table.h  region_table.h  tile_field_store.h  tile_vitality.h  world_config.h
installer/: CapitalVice.iss  license.txt  readme_after_install.txt
scripts/: build_installer.ps1
src/: main.cpp
src/character/: character_family.cpp  character_name.cpp  character_name_pools.cpp  character_social_network.cpp  character_start.cpp  character_tables.cpp  profile_builder.cpp
src/core/: application.cpp  sim_clock.cpp
src/dev/: dev_console.cpp
src/game/: action_reason_catalog.cpp  agent_relation_events.cpp  bank_loan.cpp  covert_action_executor.cpp  crime_legal_tier.cpp  crime_scene_generator.cpp  criminal_record.cpp  custody_timer.cpp  economy_index.cpp  evidence_system.cpp  game_calendar.cpp  housing_economy.cpp  housing_living_costs.cpp  investigation_case_store.cpp  jail_events.cpp  job_catalog.cpp  kin_housing.cpp  landlord_contact.cpp  legal_counsel.cpp  npc_decision.cpp  npc_population.cpp  npc_spatial_init.cpp  ny_penal_codes.cpp  operation_catalog.cpp  player_career.cpp  player_criminal_justice.cpp  player_employment.cpp  player_health.cpp  player_information_feed.cpp  player_law_enforcement.cpp  player_law_intel.cpp  player_narrative_archive.cpp  player_operations.cpp  player_organization.cpp  player_organization_ui.cpp  player_wallet.cpp  player_work_schedule.cpp  player_world_state.cpp  plea_bargain.cpp  police_contacts.cpp  (+11 more)
src/persistence/: playthrough_archive.cpp  save_game.cpp  save_gameplay_stores.cpp
src/procgen/: world_generator.cpp
src/sim/: agent_relationship_graph.cpp  borough_vitality_system.cpp  calendar_system.cpp  character_agent_store.cpp  city_control_system.cpp  criminal_justice_system.cpp  economy_system.cpp  influence_system.cpp  isim_system.cpp  npc_autonomy_system.cpp  operation_system.cpp  police_system.cpp  sim_event_queue.cpp  sim_world_bindings.cpp  street_crime_system.cpp  system_registry.cpp  world_event_catalog.cpp  world_event_store.cpp  world_event_system.cpp
src/ui/: business_renderer.cpp  context_help.cpp  dock_layout.cpp  game_modal_state.cpp  game_modal_ui.cpp  game_ui.cpp  game_ui_panels.cpp  help_manual.cpp  landmark_renderer.cpp  map_camera.cpp  map_marker_style.cpp  map_notification_layer.cpp  map_renderer.cpp  map_status_hud.cpp  npc_map_marker.cpp  panel_manager.cpp  player_map_marker.cpp  real_estate_ui.cpp
src/utils/: app_paths.cpp  seed_hash.cpp
src/world/: business_node_table.cpp  chunk_store.cpp  city_control.cpp  district_grid.cpp  district_store.cpp  landmark_table.cpp  region_table.cpp  tile_field_store.cpp  (+2 more)
test/: action_reason_test.cpp  business_node_test.cpp  calendar_travel_test.cpp  character_agent_relationship_test.cpp  character_agent_spatial_test.cpp  character_name_test.cpp  character_social_network_test.cpp  chunk_store_test.cpp  city_control_test.cpp  criminal_justice_test.cpp  dev_console_test.cpp  district_grid_test.cpp  economy_index_test.cpp  game_integration_test.cpp  housing_living_costs_test.cpp  investigation_test.cpp  landmark_table_test.cpp  map_camera_test.cpp  npc_decision_test.cpp  npc_life_sim_test.cpp  npc_visibility_test.cpp  player_operations_test.cpp  player_organization_test.cpp  player_wallet_test.cpp  plea_trial_test.cpp  profile_builder_test.cpp  property_listing_test.cpp  save_game_test.cpp  shared_travel_test.cpp  social_action_test.cpp  street_crime_test.cpp  tile_vitality_test.cpp  world_event_test.cpp  world_generator_test.cpp
